<resources>
    <string name="app_name">WeatherReport</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_delhi">New Delhi</string>
    <string name="city_newYork">New York</string>
    <string name="city_mexico">Mexico</string>
    <string name="city_london">London</string>
    <string name="city_tokyo">Tokyo</string>


</resources>